# pvr.dvblink

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  FindTinyXML2.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog  changelog.in  control  copyright  kodi-pvr-dvblink.install  rules
depends/common/tinyxml2/: tinyxml2.sha256  tinyxml2.txt
lib/libdvblinkremote/: CMakeLists.txt  channel.cpp  curlhttpclient.cpp  dvblinkremote.cpp  dvblinkremote.h  dvblinkremotecommunication.cpp  dvblinkremoteconnection.h  epg.cpp  favorites.cpp  generic_response.cpp  item_metadata.cpp  parental_lock.cpp  playback_item.cpp  playback_object.cpp  recording.cpp  recording_settings.cpp  request.h  response.h  resume_info.cpp  scheduling.cpp  scheduling.h  server_info.cpp  stream.cpp  stream_request.cpp  streaming_capabilities.cpp  timeshift.cpp  transcoded_video_stream_request.cpp  util.cpp  util.h  xml_object_serializer.h  xml_object_serializer_factory.cpp
pvr.dvblink/: addon.xml  addon.xml.in  changelog.txt
pvr.dvblink/resources/: settings.xml
pvr.dvblink/resources/language/resource.language.af_za/: strings.po
pvr.dvblink/resources/language/resource.language.am_et/: strings.po
pvr.dvblink/resources/language/resource.language.ar_sa/: strings.po
pvr.dvblink/resources/language/resource.language.ast_es/: strings.po
pvr.dvblink/resources/language/resource.language.az_az/: strings.po
pvr.dvblink/resources/language/resource.language.be_by/: strings.po
pvr.dvblink/resources/language/resource.language.bg_bg/: strings.po
pvr.dvblink/resources/language/resource.language.bs_ba/: strings.po
pvr.dvblink/resources/language/resource.language.ca_es/: strings.po
pvr.dvblink/resources/language/resource.language.cs_cz/: strings.po
pvr.dvblink/resources/language/resource.language.cy_gb/: strings.po
pvr.dvblink/resources/language/resource.language.da_dk/: strings.po
pvr.dvblink/resources/language/resource.language.de_de/: strings.po
pvr.dvblink/resources/language/resource.language.el_gr/: strings.po
pvr.dvblink/resources/language/resource.language.en_au/: strings.po
pvr.dvblink/resources/language/resource.language.en_gb/: strings.po
pvr.dvblink/resources/language/resource.language.en_nz/: strings.po
pvr.dvblink/resources/language/resource.language.en_us/: strings.po
pvr.dvblink/resources/language/resource.language.eo/: strings.po
pvr.dvblink/resources/language/resource.language.es_ar/: strings.po
pvr.dvblink/resources/language/resource.language.es_es/: strings.po
pvr.dvblink/resources/language/resource.language.es_mx/: strings.po
pvr.dvblink/resources/language/resource.language.et_ee/: strings.po
pvr.dvblink/resources/language/resource.language.eu_es/: strings.po
pvr.dvblink/resources/language/resource.language.fa_af/: strings.po
pvr.dvblink/resources/language/resource.language.fa_ir/: strings.po
pvr.dvblink/resources/language/resource.language.fi_fi/: strings.po
pvr.dvblink/resources/language/resource.language.fo_fo/: strings.po
pvr.dvblink/resources/language/resource.language.fr_ca/: strings.po
pvr.dvblink/resources/language/resource.language.fr_fr/: strings.po
pvr.dvblink/resources/language/resource.language.gl_es/: strings.po
pvr.dvblink/resources/language/resource.language.he_il/: strings.po
pvr.dvblink/resources/language/resource.language.hi_in/: strings.po
pvr.dvblink/resources/language/resource.language.hr_hr/: strings.po
pvr.dvblink/resources/language/resource.language.hu_hu/: strings.po
pvr.dvblink/resources/language/resource.language.hy_am/: strings.po
pvr.dvblink/resources/language/resource.language.id_id/: strings.po
pvr.dvblink/resources/language/resource.language.is_is/: strings.po
pvr.dvblink/resources/language/resource.language.it_it/: strings.po
pvr.dvblink/resources/language/resource.language.ja_jp/: strings.po
pvr.dvblink/resources/language/resource.language.ko_kr/: strings.po
pvr.dvblink/resources/language/resource.language.lt_lt/: strings.po
pvr.dvblink/resources/language/resource.language.lv_lv/: strings.po
pvr.dvblink/resources/language/resource.language.mi/: strings.po
pvr.dvblink/resources/language/resource.language.mk_mk/: strings.po
pvr.dvblink/resources/language/resource.language.ml_in/: strings.po
pvr.dvblink/resources/language/resource.language.mn_mn/: strings.po
pvr.dvblink/resources/language/resource.language.ms_my/: strings.po
pvr.dvblink/resources/language/resource.language.mt_mt/: strings.po
pvr.dvblink/resources/language/resource.language.my_mm/: strings.po
pvr.dvblink/resources/language/resource.language.nb_no/: strings.po
pvr.dvblink/resources/language/resource.language.nl_nl/: strings.po
pvr.dvblink/resources/language/resource.language.pl_pl/: strings.po
pvr.dvblink/resources/language/resource.language.pt_br/: strings.po
pvr.dvblink/resources/language/resource.language.pt_pt/: strings.po
pvr.dvblink/resources/language/resource.language.ro_ro/: strings.po
pvr.dvblink/resources/language/resource.language.ru_ru/: strings.po
pvr.dvblink/resources/language/resource.language.si_lk/: strings.po
pvr.dvblink/resources/language/resource.language.sk_sk/: strings.po
pvr.dvblink/resources/language/resource.language.sl_si/: strings.po
pvr.dvblink/resources/language/resource.language.sq_al/: strings.po
pvr.dvblink/resources/language/resource.language.sr_rs/: strings.po
pvr.dvblink/resources/language/resource.language.sr_rs@latin/: strings.po
pvr.dvblink/resources/language/resource.language.sv_se/: strings.po
pvr.dvblink/resources/language/resource.language.szl/: strings.po
src/: DVBLinkClient.cpp  DVBLinkClient.h  DialogDeleteTimer.cpp  DialogDeleteTimer.h  DialogRecordPref.cpp  DialogRecordPref.h  HttpPostClient.cpp  HttpPostClient.h  RecordingStreamer.cpp  RecordingStreamer.h  Settings.cpp  Settings.h  Socket.cpp  Socket.h  TimeShiftBuffer.cpp  TimeShiftBuffer.h  addon.cpp  addon.h  base64.cpp  client.cpp  client.h  dvblink_connection.h
(+10 files in other folders)
